# smp-rs

./: .gitignore  Cargo.toml  build.rs  bunfig.toml  package.json
.github/workflows/: setup.yml
assets/: app.css  bun-nunjucks.js  dev.sh  index.css  links  output.css  preview.js
migrations/: 1739959419_init.sql  command
setup/: Cargo.toml
setup/src/: main.rs
src/: assets.rs  auth.rs  cache.rs  config.rs  error.rs  home.rs  lib.rs  main.rs  page.rs  routes.rs
src/app/: auth.rs  events.rs  home.rs  mod.rs
src/cache/: events.rs
src/handlers/: auth.rs
src/helpers/: inline.rs
src/models/: mod.rs  presensi.rs
src/routes/: auth.rs  home.rs  library.rs  presensi.rs
templates/: admin.html  admin.layout.html  home.html  index.events.html  index.html  layout.html  login.html
templates/admin/: events.add.html  events.html
templates/presensi/: layout.html  presensi.html
