[package]
name = "smp-rs"
version = "0.1.0"
edition = "2021"
default-run = "smp-rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", default-features = false, features = ["http1", "tokio", "json"] }
dotenvy = "0.15.7"
password-hash = { version = "0.5.0", features = ["getrandom"] }
rinja = { version = "0.3.5", default-features = false }
tokio = { version = "1.44.0", features = ["io-util", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
