[package]
name = "smp-rs"
version = "0.1.0"
edition = "2021"
default-run = "smp-rs"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
axum = { version = "0.8.1", default-features = false, features = ["http1", "tokio", "json", "form"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
password-hash = { version = "0.5.0", features = ["getrandom"] }
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["io-util", "net", "rt-multi-thread"] }
tour = { git = "https://github.com/ariaandika/tour.git", version = "0.1.0" }
tower-service = "0.3.3"
tracing = "0.1.41"

[build-dependencies]
chrono = "0.4.40"
